--- a/source/index.html
+++ b/source/index.html
@@ -304,7 +304,7 @@
           <div class="container">
             <h3 class="contacts__title">Контакты</h3>
             <div class="contacts__map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61e4dd7f869f77945e7a19ff3216a228e3b579c1c6a93ce13122fbc762a439fe&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
+            <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61e4dd7f869f77945e7a19ff3216a228e3b579c1c6a93ce13122fbc762a439fe&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
             </div>
             <ul class="contacts__list">
               <li class="contacts__list-item">
