--- a/source/news-page.html
+++ b/source/news-page.html
@@ -21,8 +21,8 @@
           </div>
           <ul class="nav__list">
             <li class="nav__list-item"><a href="./index.html">Главная</a></li>
-            <li class="nav__list-item"><a href="#">Образование</a></li>
-            <li class="nav__list-item"><a href="#">Проекты</a></li>
+            <li class="nav__list-item"><a href="./education.html">Образование</a></li>
+            <li class="nav__list-item"><a href="./project.html">Проекты</a></li>
             <li class="nav__list-item nav__list-item-active">
               <a href="#">Новости</a>
             </li>
