--- a/source/education.html
+++ b/source/education.html
@@ -21,8 +21,12 @@
           </div>
           <ul class="nav__list">
             <li class="nav__list-item"><a href="./index.html">Главная</a></li>
-            <li class="nav__list-item"><a href="./education.html">Образование</a></li>
-            <li class="nav__list-item"><a href="./project.html">Проекты</a></li>
+            <li class="nav__list-item nav__list-item-active">
+              <a href="./education.html">Образование</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="./project.html">Проекты</a>
+            </li>
             <li class="nav__list-item">
               <a href="./news-page.html">Новости</a>
             </li>
@@ -32,45 +36,16 @@
             <li class="nav__list-item">
               <a href="./requisite.html">Реквизиты</a>
             </li>
-            <li class="nav__list-item nav__list-item-active">
-              <a href="#">Контакты</a>
+            <li class="nav__list-item">
+              <a href="./contacts-page.html">Контакты</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <section>
-      <div class="contacts-page">
-        <div class="container">
-          <h2 class="contacts-page__title">Контакты</h2>
-          <div style="display: flex; justify-content: space-between">
-            <div class="contacts-page__left">
-              <h3>Адрес:</h3>
-              <p>
-                127018, г. Москва, ул. Складочная, д. 1, стр. 18, подъезд 5,
-                этаж 5, офис № 11.
-              </p>
-              <p>
-                Понедельник - пятница c 10.00 до 18.00 График ведения
-                образовательной деятельности: с 8.00 до 20.00 ежедневно
-              </p>
-              <a href="tel:+79262274654">8-926-227-46-54</a>
-              <a href="mailto:MNOC-cityfarmer@yandex.ru"
-                >MNOC-cityfarmer@yandex.ru</a
-              >
-            </div>
-            <div class="contacts-page__right">
-              <div class="contacts-page__map">
-                <script
-                  type="text/javascript"
-                  charset="utf-8"
-                  async
-                  src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A61e4dd7f869f77945e7a19ff3216a228e3b579c1c6a93ce13122fbc762a439fe&amp;width=600&amp;height=400&amp;lang=ru_RU&amp;scroll=true"
-                ></script>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="container">
+        <h2 class="education__title">EDUCATION</h2>
       </div>
     </section>
     <footer class="footer">
