--- a/source/index.html
+++ b/source/index.html
@@ -23,8 +23,8 @@
             <li class="nav__list-item nav__list-item-active">
               <a href="#">Главная</a>
             </li>
-            <li class="nav__list-item"><a href="#">Образование</a></li>
-            <li class="nav__list-item"><a href="#">Проекты</a></li>
+            <li class="nav__list-item"><a href="./education.html">Образование</a></li>
+            <li class="nav__list-item"><a href="./project.html">Проекты</a></li>
             <li class="nav__list-item"><a href="./news-page.html">Новости</a></li>
             <li class="nav__list-item">
               <a href="./documents.html">Документы</a>
